syntax = "proto3";

package trading;

service TradingService {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Deposit (DepositRequest) returns (DepositResponse);
  rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message DepositRequest {
  int64 uid = 1;
  string amount = 2;
  string currency = 3;
}

message DepositResponse {
  string message = 1;
}

message WithdrawRequest {
  int64 uid = 1; 
  string amount = 2;
  string currency = 3;
}

message WithdrawResponse {
  string message = 1;
}
